Blue color of button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header class="ag__header">
     <button class="ag__header__cta">
         <i class="fa-solid fa-arrow-left"></i>
-        <span class="ag__header__cta__lable">Work Order Details</span>
+        <span class="ag__header__cta__label">Work Order Details</span>
     </button>
 </header>
 
